<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".ui.main.InsertPinActivity">


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleAddNewPin_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spot_a_new_place"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <ImageView
        android:id="@+id/rounded_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Button"
        android:id="@+id/closePinInfo_button"
        android:layout_width="wrap_content"
        android:layout_height="112dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/spot_a_new_place"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:maxImageSize="48dp"
        app:tint="@color/white" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/uploadProgressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="310dp"
        android:layout_height="317dp"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:src="@drawable/placeholder_pin_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Button"
        android:id="@+id/choosePicFromLocal_button"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginStart="20dp"

        android:contentDescription="@string/spot_a_new_place"
        android:src="@drawable/library_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/takePic_button"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659"
        app:maxImageSize="48dp"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Button"

        android:id="@+id/takePic_button"
        android:layout_width="wrap_content"
        android:layout_height="112dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"

        android:contentDescription="@string/spot_a_new_place"
        android:src="@drawable/takephoto_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663"
        app:maxImageSize="48dp"
        app:tint="@color/white" />

    <EditText
        android:id="@+id/newPinTitle_edt"
        style="@style/TextWiew"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="@color/primaryColor"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="8dp"
        android:drawableTint="@color/white"
        android:hint="@string/title"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePic_button"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/uploadPin_button"
        android:layout_width="128dp"
        android:layout_height="74dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/spot_it"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>